...
    }
  };

  const getStatusText = () => {
    switch (status) {
      case 'connected':
        return 'Connected';
      case 'connecting':
        return 'Connecting';
      case 'rotating':
        return 'Rotating Keys';
      case 'errored':
        return 'Error';
      default:
        return 'Disconnected';
    }
  };

  return (
    <View
      style={[styles.pill, {backgroundColor: getStatusColor()}]}
...
